--- a/pom.xml
+++ b/pom.xml
@@ -72,11 +72,10 @@
 			<groupId>com.mysql</groupId>
 			<artifactId>mysql-connector-j</artifactId>
 		</dependency>
-		thymeleaf -->
+		<!-- thymeleaf -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-thymeleaf</artifactId>
-
 		</dependency>
 	</dependencies>
 
