--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,8 @@
 spring.application.name=ProyectoReservaDeVehiculos
 
+# Configuracion del servidor
+server.port=8090
+
 # Usar H2 en memoria
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.driverClassName=org.h2.Driver
@@ -13,13 +16,6 @@ spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=false
 spring.jpa.open-in-view=false
 
-# Desabilitar DevTools
-spring.devtools.restart.enabled=false
-spring.devtools.livereload.enabled=false
-
-# Configuracion del servidor
-server.port=8090
-
 # Configuracion de Thymeleaf
 spring.thymeleaf.cache=false
 spring.thymeleaf.prefix=classpath:/templates/
@@ -29,14 +25,6 @@ spring.thymeleaf.suffix=.html
 logging.level.org.hibernate.SQL=WARN
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=WARN
 
-# Configuracion del servidor
-server.port=8090
-
-# Configuracion de Thymeleaf
-spring.thymeleaf.cache=false
-spring.thymeleaf.prefix=classpath:/templates/
-spring.thymeleaf.suffix=.html
-
-# Configuracion de logs
-logging.level.org.hibernate.SQL=DEBUG
-logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+# DevTools configuration
+spring.devtools.restart.enabled=true
+spring.devtools.livereload.enabled=true
