--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,27 @@ spring.datasource.username=root
 spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+
+# ==================== CONFIGURACIÓN DE SEGURIDAD ====================
+
+# Timeout de sesión: 30 minutos de inactividad
+# Formato: 30m (minutos), 1h (horas), 3600s (segundos)
+server.servlet.session.timeout=30m
+
+# ===== CONFIGURACIÓN DE CACHÉ - SOLUCIÓN BOTÓN "ATRÁS" =====
+# IMPORTANTE: Estos settings complementan NoCacheFilter.java
+# Deshabilita caché de recursos estáticos servidos por Spring Boot
+spring.web.resources.cache.cachecontrol.no-cache=true
+spring.web.resources.cache.cachecontrol.no-store=true
+spring.web.resources.cache.cachecontrol.must-revalidate=true
+
+# Cookie de sesión segura (solo HTTPS en producción)
+# Cambiar a true en ambiente de producción con HTTPS
+server.servlet.session.cookie.secure=false
+server.servlet.session.cookie.http-only=true
+
+# Nombre personalizado de cookie de sesión (seguridad por oscuridad)
+server.servlet.session.cookie.name=APPSESSIONID
+
+# SameSite para prevenir CSRF
+server.servlet.session.cookie.same-site=strict
